// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SvgIcon variants: size 1`] = `
<styled.span
  color="#000"
  size={24}
  transition="width"
>
  <StyledComponent
    color="#000"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "FpIJv",
          "rules": Array [
            "
  ",
            [Function],
            "

  color: ",
            [Function],
            ";
  width: ",
            [Function],
            "px;
  height: ",
            [Function],
            "px;
  box-sizing: content-box;
  
  ",
            [Function],
            "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
            [Function],
            ";

  }
",
          ],
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size={24}
    transition="width"
  >
    <span
      className="sc-bxivhb bmRGzs"
      color="#000"
      size={24}
    >
      <test-file-stub />
    </span>
  </StyledComponent>
</styled.span>
`;

exports[`Storyshots SvgIcon variants: transition array 1`] = `
<styled.span
  color="#000"
  size={24}
  transition={
    Array [
      "width",
      "height",
    ]
  }
>
  <StyledComponent
    color="#000"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "FpIJv",
          "rules": Array [
            "
  ",
            [Function],
            "

  color: ",
            [Function],
            ";
  width: ",
            [Function],
            "px;
  height: ",
            [Function],
            "px;
  box-sizing: content-box;
  
  ",
            [Function],
            "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
            [Function],
            ";

  }
",
          ],
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size={24}
    transition={
      Array [
        "width",
        "height",
      ]
    }
  >
    <span
      className="sc-bxivhb FpIJv"
      color="#000"
      size={24}
    >
      <test-file-stub />
    </span>
  </StyledComponent>
</styled.span>
`;

exports[`Storyshots SvgIcon variants: width height 1`] = `
<styled.span
  color="#000"
  height={24}
  size={16}
  transition="width"
  width={24}
>
  <StyledComponent
    color="#000"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "FpIJv",
          "rules": Array [
            "
  ",
            [Function],
            "

  color: ",
            [Function],
            ";
  width: ",
            [Function],
            "px;
  height: ",
            [Function],
            "px;
  box-sizing: content-box;
  
  ",
            [Function],
            "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
            [Function],
            ";

  }
",
          ],
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    height={24}
    size={16}
    transition="width"
    width={24}
  >
    <span
      className="sc-bxivhb bmRGzs"
      color="#000"
      height={24}
      size={16}
      width={24}
    >
      <test-file-stub />
    </span>
  </StyledComponent>
</styled.span>
`;
